# round-table

./: .gitignore  README.md  package.json  tsconfig.json
contract/: .gitignore  Cargo.toml
contract/keys/: local_net.json  local_net_bs.json  root.json  round_table.json  table1.json  table2.json  user1.json  user2.json  user3.json  user4.json
contract/scripts/: build_all.sh  deploy.sh  setup_keys.sh
contract/src/: accounts.rs  helpers.rs  instruction.rs  lib.rs  processor.rs
src/: Chat.ts  Contract.ts  Matcher.ts  Presence.ts  RoundTable.ts  Util.ts  index.ts  p2p.js
src/server/: Server.ts  ServerP2P.js
test/: test.tsx  test_chain_bringup.tsx  test_chat.tsx  test_matcher.tsx  test_server.tsx
util/: contract_api.ts
